# capsule

./: .gitignore  .golangci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  PRODUCTION_ROLLOUT.md  README.md  SECURITY.md  buf.yaml  capsule-documentation-audit.md  cursor-cloud-agent-system-prompt.md  generalisation_analysis.md  go.mod  go.sum  onboard.yaml
.claude/: settings.local.json
.github/: actionlint.yaml  dependabot.yml
.github/scripts/: check-migrations.sh  release-version.sh
.github/workflows/: build-host-image.yaml  ci.yaml  e2e-canary.yml  release.yaml
agent_capabilities/: system_prompt_summary.md
agent_capabilities/tools/: ApplyPatch.json  Delete.json  EditNotebook.json  FetchMcpResource.json  Glob.json  ListMcpResources.json  ManagePullRequest.json  ReadFile.json  Shell.json  Subagent.json  TodoWrite.json  WebFetch.json  WebSearch.json  parallel.json  rg.json
api/proto/: runner.pb.go  runner.proto  runner_grpc.pb.go
claude_sandbox_service/: BUILD.bazel  README.md  anthropic_message.py  claude_sandbox_service.py  claude_sandbox_service_test.py  demo_capsule_sdk_session_resume.py  message_formatting_test.py  sample_sandbox_session_july_2025.example  sandbox_message.py  sdk_session.py  sdk_session_test.py
claude_sandbox_service/claude_sandbox_service/: BUILD.bazel  Dockerfile  branch-guard.sh  gce_metadata_emulator.py  git-clean-state-hook.sh  gunicorn_config.py  install-branding-hook.sh  pr-creation-hook.sh  push-branch-hook.sh  sandbox-claude.md  settings.json  startup.sh
cmd/bench-allocate/: main.go
cmd/bench-session/: main.go
cmd/capsule-control-plane/: access_planes.go  config_cache.go  downscaler.go  downscaler_test.go  handlers_test.go  heartbeat.go  hosts.go  layer_builder.go  layer_builder_test.go  layered_configs.go  main.go  mcp.go  mcp_test.go  quarantine.go  rate_tracker.go  rate_tracker_test.go  response_helpers.go  scheduler.go  scheduler_bugs_test.go  scheduler_test.go  schema.sql  session_checkpoints_http.go  session_heads.go  snapshots.go  ttl.go
cmd/capsule-manager/: checkpoint_loop.go  handlers_test.go  main.go  network_policy_http.go  quarantine_http.go  server.go  server_test.go
cmd/capsule-thaw-agent/: cgroup.go  file_handlers.go  file_handlers_test.go  main.go  network_test.go
cmd/control-plane/: api_errors.go  auth_test.go  config_cache.go  downscaler.go  downscaler_test.go  freshness.go  freshness_test.go  gce_utils.go  heartbeat.go  heartbeat_test.go  hosts.go  hosts_bugs_test.go  hosts_reservation_test.go  layer_builder.go  layered_configs.go  main.go  mcp.go  mcp_proxy.go  mcp_test.go  migrations.go  migrations_test.go  queue.go  repos.go  repos_test.go  scheduler.go  scheduler_bugs_test.go  scheduler_test.go  schema.sql  session_resume.go  session_resume_test.go  snapshot_configs.go  snapshot_tags.go  snapshot_tags_test.go  snapshots.go  ttl.go  utils.go  webhook.go  webhook_test.go
cmd/data-snapshot-builder/: main.go
cmd/derive-snapshot/: main.go
cmd/firecracker-manager/: app_proxy.go  handlers_test.go  main.go  network_policy_http.go  server.go  server_test.go
cmd/git-cache-builder/: main.go
cmd/git-cache-freshness/: main.go
cmd/onboard/: config.go  config_test.go  layered_config.go  main.go  (+7 more)
dev/: Dockerfile.agent-rootfs  Dockerfile.dev-rootfs  bench-pause-resume.sh  build-agent-rootfs.sh  build-dev-rootfs.sh  build-snapshot.sh  claude-settings.json  lib-gcs-mode.sh  lib-workload-key.sh  lima.yaml  provision-agent-snapshot.sh  run-agent-e2e.sh  run-stack.sh  setup-linux.sh  stop-stack.sh  swarm.sh  test-agent-e2e.sh  test-agent-onboard.sh  test-agent-sessions.sh  test-auth-proxy.sh  test-auto-resume.sh  test-checkpoint.sh  test-derive-snapshot.sh  test-exec.sh  test-extension-drives.sh  test-file-ops.sh  test-gcs-pause-resume.sh  test-gcs-rootfs-durability.sh  test-host-gc.sh  test-multi-pause-dedup.sh  test-network-policy.sh  test-pause-resume.sh  test-pty.sh  test-snapshot-builder.sh  test-template-tags.sh
docs/: API.md  DEV_SETUP.md  HOWTO.md  architecture-pitch.md  architecture.md  operations.md  rollout-plan.md  secure-access-plane-future.md  secure-access-plane-general-design.md  secure-access-plane-one-pager.md  setup.md
examples/: README.md  cw_claude_sdk.json
scripts/: e2e_simulate.py
sdk/python/: CAPSULE_SDK_GAPS.md  README.md  pyproject.toml
sdk/python/src/bf_sdk/: __init__.py  _config.py  _errors.py  _http.py  _http_async.py  _shell.py  _shell_async.py  _snapshot_commands.py  async_client.py  async_runner_config.py  async_runner_session.py  client.py  runner_config.py  runner_session.py  templates.py
sdk/python/src/bf_sdk/models/: __init__.py  common.py  file.py  layered_config.py  runner.py  snapshot.py  workload.py
sdk/python/src/bf_sdk/resources/: __init__.py  async_layered_configs.py  async_runners.py  async_snapshots.py  async_workloads.py  layered_configs.py  runners.py  snapshot_configs.py  snapshots.py  workloads.py
sdk/python/src/capsule_sdk/: __init__.py  _config.py  _errors.py  _http.py  _http_async.py  _shell.py  _shell_async.py  _validation.py  async_client.py  async_runner_config.py  async_runner_session.py  client.py  runner_config.py  runner_session.py
sdk/python/src/capsule_sdk/models/: __init__.py  common.py  file.py  host.py  layered_config.py  runner.py  snapshot.py  workload.py
sdk/python/src/capsule_sdk/resources/: __init__.py  async_hosts.py  async_layered_configs.py  async_runners.py  async_snapshots.py  async_workloads.py  hosts.py  layered_configs.py  runners.py  snapshots.py  workloads.py
sdk/python/tests/: conftest.py  e2e_live.py  e2e_live_async.py  test_async_client_surface.py  test_async_http.py  test_async_runner_session.py  test_async_runners.py  test_async_shell.py  test_async_snapshots.py  test_client_surface.py  test_config.py  test_contract.py  test_errors.py  test_files.py  test_http_retries.py  test_layered_configs.py  test_runner_config.py  test_runner_session.py  test_runners.py  test_shell.py  test_snapshot_configs.py  test_snapshots.py  test_templates.py  test_workloads.py
slack-demo/: setup-tunnels.sh
(+286 files in other folders)
