load("@rules_python//python:defs.bzl", "py_binary", "py_library")
load("//tools:scio.bzl", "py_test_glean")

package(default_visibility = ["//visibility:public"])

py_binary(
    name = "claude_sandbox_service",
    srcs = ["claude_sandbox_service.py"],
    python_version = "PY3",
    visibility = [
        "//:__subpackages__",
        "//deploy/docker:__subpackages__",
    ],
    deps = [
        ":anthropic_message",
        ":sandbox_message",
        ":sdk_session",
        "@pip//flask",
        "@pip//pydantic",
    ],
)

py_library(
    name = "__init__",
    srcs = ["__init__.py"],
    visibility = ["//:__subpackages__"],
)

py_library(
    name = "anthropic_message",
    srcs = ["anthropic_message.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "@pip//anthropic",
        "@pip//pydantic",
    ],
)

py_library(
    name = "sandbox_message",
    srcs = ["sandbox_message.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":anthropic_message",
        "@pip//anthropic",
        "@pip//pydantic",
    ],
)

py_test_glean(
    name = "message_formatting_test",
    srcs = ["message_formatting_test.py"],
    deps = [
        ":sandbox_message",
        "@pip//pytest",
    ],
)

py_test_glean(
    name = "claude_sandbox_service_test",
    srcs = ["claude_sandbox_service_test.py"],
    deps = [
        ":claude_sandbox_service",
        ":sandbox_message",
        ":sdk_session",
        "@pip//absl_py",
        "@pip//parameterized",
    ],
)

py_test_glean(
    name = "sdk_session_test",
    srcs = ["sdk_session_test.py"],
    deps = [
        ":sandbox_message",
        ":sdk_session",
        "@pip//absl_py",
    ],
)

py_library(
    name = "sdk_session",
    srcs = ["sdk_session.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":sandbox_message",
        "@pip//pydantic",
    ],
)
