package(default_visibility = ["//visibility:public"])

filegroup(
    name = "dockerfile",
    srcs = ["Dockerfile"],
)

filegroup(
    name = "startup_script",
    srcs = ["startup.sh"],
)

filegroup(
    name = "gunicorn_config",
    srcs = ["gunicorn_config.py"],
)

filegroup(
    name = "claude_md",
    srcs = ["sandbox-claude.md"],
)

filegroup(
    name = "git_clean_state_hook",
    srcs = ["git-clean-state-hook.sh"],
)

filegroup(
    name = "pr_creation_hook",
    srcs = ["pr-creation-hook.sh"],
)

filegroup(
    name = "push_branch_hook",
    srcs = ["push-branch-hook.sh"],
)

filegroup(
    name = "branch_guard",
    srcs = ["branch-guard.sh"],
)

filegroup(
    name = "install_branding_hook",
    srcs = ["install-branding-hook.sh"],
)

filegroup(
    name = "claude_settings",
    srcs = ["settings.json"],
)

filegroup(
    name = "gce_metadata_emulator",
    srcs = ["gce_metadata_emulator.py"],
)

filegroup(
    name = "all_files",
    srcs = [
        ":branch_guard",
        ":claude_md",
        ":claude_settings",
        ":dockerfile",
        ":gce_metadata_emulator",
        ":git_clean_state_hook",
        ":google_cloud_sdk",
        ":gunicorn_config",
        ":install_branding_hook",
        ":pr_creation_hook",
        ":push_branch_hook",
        ":startup_script",
    ],
)

filegroup(
    name = "google_cloud_sdk",
    srcs = ["google-cloud-sdk.list"],
)
