[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bf-sdk"
version = "1.0.0"
description = "Python SDK for bazel-firecracker"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27,<1.0",
    "pydantic>=2.0,<3.0",
    "websockets>=12.0,<15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "pyright>=1.1",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bf_sdk"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["N818", "SIM117"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
