[build-system]
requires = ["hatchling", "packaging>=24.2"]
build-backend = "hatchling.build"

[project]
name = "capsule-sdk"
dynamic = ["version"]
description = "Python SDK for Capsule"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "httpx>=0.27,<1.0",
    "pydantic>=2.0,<3.0",
    "PyYAML>=6.0",
    "websockets>=12.0,<17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "pyright>=1.1",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/capsule_sdk"]

[tool.hatch.version]
path = "src/capsule_sdk/_version.py"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["N818", "SIM117"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
markers = [
    "contract: tests that run against a live control-plane instance",
]
